--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,24 @@
  *= require_tree .
  *= require_self
  */
+
+ *{
+ 	margin:0;
+ 	padding: 0;
+ }
+
+.PageTitle{
+	margin:1em;
+}
+
+.form{
+	display: flex;
+	flex-direction: column;
+	width:50%;
+	margin:auto;
+
+}
+
+.form input,label {
+	margin: 1em;	
+}
